--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ ml-10M100K
 scheme_10
 scheme_20
 **/*.dat
+edx
+movielens
+movies
+ratings
+recommendations_pop_10
+trainmat_final_10
+trainmat_reduced
