--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@ predmat_pop_10
 testmat_first_matrix
 predictions_pop_10_1
 predictions_pop_10_2
+predictions_pop_10_10
+predictions_pop_10_3
+predictions_pop_10_4
+predictions_pop_10_5
+predictions_pop_10_6
+predictions_pop_10_7
+predictions_pop_10_8
+predictions_pop_10_9
+predmat_pop_10_1
+predmat_pop_10_2
+predmat_pop_10_3
+predmat_pop_10_4
+predmat_pop_10_5
+predmat_pop_10_6
