--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ predmat_pop_10_3
 predmat_pop_10_4
 predmat_pop_10_5
 predmat_pop_10_6
+predmat_pop_10_10
+predmat_pop_10_7
+predmat_pop_10_8
+predmat_pop_10_9
+testmat_1_matrix
