--- a/projects/Harvardx/Capstone/Project 1 - Movielens/.gitignore
+++ b/projects/Harvardx/Capstone/Project 1 - Movielens/.gitignore
@@ -17,3 +17,12 @@ result_rating_ibcf_10
 result_rating_svd_10
 result_rating_svdf_10
 result_rating_ubcf_10
+testmat_10_10_matrix
+testmat_10_2_matrix
+testmat_10_3_matrix
+testmat_10_4_matrix
+testmat_10_5_matrix
+testmat_10_6_matrix
+testmat_10_7_matrix
+testmat_10_8_matrix
+testmat_10_9_matrix
