It all seems to work

--- a/projects/Harvardx/Capstone/Project 1 - Movielens/.gitignore
+++ b/projects/Harvardx/Capstone/Project 1 - Movielens/.gitignore
@@ -26,3 +26,18 @@ testmat_10_7_matrix
 testmat_10_8_matrix
 testmat_10_9_matrix
 testmat_all
+diffmat_10_1
+diffmat_10_10
+diffmat_10_2
+diffmat_10_3
+diffmat_10_4
+diffmat_10_5
+diffmat_10_6
+diffmat_10_7
+diffmat_10_8
+diffmat_10_9
+diffmat_all
+number_of_ratings_in_test_set
+predmat_pop_all
+rmse
+squared_differences_all
