Beginning new project

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ predmat_pop_10_8
 predmat_pop_10_9
 testmat_1_matrix
 testmat_10_1_matrix
+users
+BX-Book-Ratings.csv
+BX-Books.csv
+BX-Users.csv
+books
+dataset.zip
